--- a/empathy-notepad/src/app/components/card/card.component.html
+++ b/empathy-notepad/src/app/components/card/card.component.html
@@ -1,1 +1,10 @@
-<p>card works!</p>
+<div class="survey-card">
+  <h2>{{ surveyData.title }}</h2>
+  <p>{{ surveyData.description }}</p>
+  
+  <div class="details">
+    <p>ID: {{ surveyData.id }}</p>
+    <!-- <p>Total Questions: {{ surveyData.questions.length }}</p> -->
+  </div>
+  
+  </div>
