--- a/empathy-notepad/src/app/components/card/card.component.html
+++ b/empathy-notepad/src/app/components/card/card.component.html
@@ -6,5 +6,9 @@
     <p>ID: {{ surveyData.id }}</p>
     <!-- <p>Total Questions: {{ surveyData.questions.length }}</p> -->
   </div>
+
+  <div class="actions">
+    <button (click)="onEditClick()">Edit Survey</button>
+  </div>
   
   </div>
