--- a/empathy-notepad/src/app/components/card/card.component.html
+++ b/empathy-notepad/src/app/components/card/card.component.html
@@ -1,14 +1,23 @@
-<div class="survey-card">
-  <h2>{{ surveyData.title }}</h2>
-  <p>{{ surveyData.description }}</p>
-  
+<div class="survey-card">  
   <div class="details">
     <p>ID: {{ surveyData.id }}</p>
-    <!-- <p>Total Questions: {{ surveyData.questions.length }}</p> -->
+    <div *ngFor="let question of surveyData.questions">
+      <div class="question-item">
+        <strong>Q:</strong> {{ question.questionText }} 
+        <span *ngIf="question.mandatoryInd">(Mandatory)</span>
+        <div *ngIf="question.options && question.options.length > 0">
+          <!-- TODO need to change the dots to '-' -->
+          <ul> 
+            <li *ngFor="let option of question.options">{{ option }}</li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
 
   <div class="actions">
     <button (click)="onEditClick()">Edit Survey</button>
+    <app-menu (typeSelected)="onQuestionTypeSelect($event)"></app-menu>
   </div>
   
   </div>
