--- a/empathy-notepad/src/app/components/home/home.component.html
+++ b/empathy-notepad/src/app/components/home/home.component.html
@@ -1,4 +1,4 @@
-<div class="survey-container">
+<div>
   
   <p *ngIf="isLoading">Loading surveys...</p>
   <p *ngIf="errorMessage">{{ errorMessage }}</p> 
