--- a/empathy-notepad/src/app/components/question/question.component.css
+++ b/empathy-notepad/src/app/components/question/question.component.css
@@ -79,6 +79,85 @@
       margin-bottom: 16px;
 }
 
+.config-toggle-wrapper {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
+
+.toggle-text {
+    font-size: 0.95em;
+    white-space: nowrap;
+    font-family: 'Inter';
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 20px;
+    color: #344054;
+}
+
+/* Switch container*/
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 40px;
+    height: 24px; 
+}
+
+/* Hide the default HTML checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #F2F4F7;
+    transition: .4s;
+}
+
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 16px;
+    width: 16px;
+    left: 4px; 
+    bottom: 4px; 
+    background-color: white;
+    transition: .3s;
+}
+
+input:checked + .slider {
+    background-color: #1570EF; 
+}
+
+input:checked + .slider:before {
+    transform: translateX(16px);
+}
+
+.slider.round {
+    border-radius: 36px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
+}
+
+
+.question-config-actions {
+    display: flex;
+    justify-content: flex-end; 
+    align-items: center;
+    gap: 30px; 
+    padding-top: 10px;
+}
 
 /* Desktop Styles */
 @media (min-width: 1024px) {
