Adding svg for the menu button
Had a small problem using font awesome so I had to settle for svg. Adding some styling for the menu and svg.
Added  host listener for clicking away from the button and menu.

--- a/empathy-notepad/src/app/components/menu/menu/menu.component.css
+++ b/empathy-notepad/src/app/components/menu/menu/menu.component.css
@@ -4,12 +4,29 @@
 }
 
 .dropdown-toggle {
+
   padding: 8px 15px;
-  background-color: #007bff;
-  color: white;
+  background-color: #F5FAFF;
+  color: #175CD3;
   border: none;
   cursor: pointer;
-  border-radius: 4px;
+  border-radius: 8px;
+
+  display: flex;
+  align-items: center;
+
+  gap: 4px;
+
+  justify-content: flex-start;
+}
+
+.menu-svg-icon {
+    width: 16px; 
+    height: 16px;
+    
+    fill: #175CD3;
+    
+    flex-shrink: 0;
 }
 
 .dropdown-panel {
