simplifying circle checked component
Removed html file as not being used
updated the css for the circle checked component
Simplified the logic but I am still getting a 404 when the page loads to try and get the svgs

--- a/empathy-notepad/src/app/components/menu/menu/menu.component.html
+++ b/empathy-notepad/src/app/components/menu/menu/menu.component.html
@@ -2,7 +2,7 @@
   
   <button class="dropdown-toggle" (click)="toggleMenu()">
     
-    <img src="../../../../assets/icons/circle-check.svg" alt="Test Icon" style="width: 20px; height: 20px;">
+    <!-- <img src="../../../../assets/icons/circle-check.svg" alt="Test Icon" style="width: 20px; height: 20px;"> -->
     <!-- <app-circle-checked-icon class="menu-svg-icon" [name]="iconMap[type.key]"></app-circle-checked-icon> -->
 
     <span *ngIf="selectedKey" class="selected-label"> ({{ selectedKey | titlecase }})</span>
