--- a/empathy-notepad/src/app/components/question/question.component.css
+++ b/empathy-notepad/src/app/components/question/question.component.css
@@ -18,8 +18,8 @@
 
 
 .index-box-wrapper {
-    width: 45px; 
-    min-height: 36px;
+    /* width: 45px;  */
+    /* min-height: 36px; */
     padding: 6px 10px 6px 10px;
     border-radius: 8px;
     border: 1px solid #ccc; 
