Adding styling to question component
This is so the first card has a border colour of blue and on hover of the cards turns blue.

--- a/empathy-notepad/src/app/components/question/question.component.css
+++ b/empathy-notepad/src/app/components/question/question.component.css
@@ -4,8 +4,15 @@
       width: 100%;
       padding: 10px;
       border-radius: 8px;
-      border: 1px solid #1570EF;
+      border: 1px solid;
+      border-color: #D0D5DD !important;
       margin-bottom: 1px;
+      transition: border-color 0.3s ease;
+}
+
+.question-card.question-card:hover, 
+.question-card.question-card.is-first-question {
+    border-color: #1570EF !important;
 }
 
 
