--- a/empathy-notepad/src/app/components/manage-survey/manage-survey.component.html
+++ b/empathy-notepad/src/app/components/manage-survey/manage-survey.component.html
@@ -57,7 +57,7 @@
       </div>
     </div>
     
-    <button type="button" (click)="addQuestion()">+ Add New Question</button>
+    <button class="add-new-question-button" type="button" (click)="addQuestion()">+ Add New Question</button>
 
     <hr>
     
