Adding logic to mandatory buttons to be clicked if the manage survey has it selected
Updating card, questions and manage survey component so that the event triggers up the flow back to the data and back to the manage survey component where edit and creations are done.

--- a/empathy-notepad/src/app/components/card/card.component.html
+++ b/empathy-notepad/src/app/components/card/card.component.html
@@ -2,8 +2,8 @@
     
     <app-question 
         [questionData]="questionData"
-        [displayIndex]="displayIndex">
-        
+        [displayIndex]="displayIndex"
+        (configChange)="handleQuestionConfigUpdate($event)">
         <app-menu 
             (typeSelected)="typeSelected.emit($event)" 
             menu-slot>
