--- a/empathy-notepad/src/app/components/manage-survey/manage-survey.component.html
+++ b/empathy-notepad/src/app/components/manage-survey/manage-survey.component.html
@@ -24,37 +24,25 @@
     </fieldset>
 
     <h3>Questions</h3>
-    
+
     <div formArrayName="questions" class="question-list">
-      
-      <div *ngFor="let questionGroup of questions.controls; let qIndex = index" 
-           [formGroupName]="qIndex" class="question-group">
         
-        <h4>Question #{{ qIndex + 1 }}</h4>
-        
-        <label>Text:</label>
-        <input type="text" formControlName="questionText">
-        <div *ngIf="questionGroup.get('questionText')?.invalid && questionGroup.get('questionText')?.touched" class="error">
-          Question text is required.
-        </div>
-        
-        <label>Mandatory:</label>
-        <input type="checkbox" formControlName="mandatoryInd">
-
-        <h5>Options (Min 2)</h5>
-        <div formArrayName="options" class="option-list">
-          <div *ngFor="let optionControl of getOptions(qIndex).controls; let oIndex = index">
-            <input type="text" [formControlName]="oIndex">
-            
-            <button type="button" (click)="removeOption(qIndex, oIndex)" *ngIf="getOptions(qIndex).length > 2">
-              Remove Option
-            </button>
+        <div *ngFor="let questionGroup of questions.controls; let qIndex = index" 
+            [formGroupName]="qIndex" class="question-group-wrapper">
+          
+          <h4>Question #{{ qIndex + 1 }}</h4>
+          
+          <label>Text:</label>
+          <input type="text" formControlName="questionText">
+          <div *ngIf="questionGroup.get('questionText')?.invalid && questionGroup.get('questionText')?.touched" class="error">
+            Question text is required.
           </div>
-          <button type="button" (click)="addOption(qIndex)">+ Add Option</button>
+          
+          <label>Mandatory:</label>
+          <input type="checkbox" formControlName="mandatoryInd"> 
+          
+          <button type="button" (click)="removeQuestion(qIndex)">Delete Question</button>
         </div>
-
-        <button type="button" (click)="removeQuestion(qIndex)">Delete Question</button>
-      </div>
     </div>
     
     <button class="add-new-question-button" type="button" (click)="addQuestion()">+ Add New Question</button>
