--- a/empathy-notepad/src/app/components/question/question.component.html
+++ b/empathy-notepad/src/app/components/question/question.component.html
@@ -31,6 +31,7 @@
             <input 
                 type="checkbox"  
                 [checked]="questionData.randomizeOptionsInd"
+                (change)="onCheckboxChange('randomizeOptions', $event)"
                 > 
             
             <span class="slider round"></span> 
@@ -43,6 +44,7 @@
             <input 
                 type="checkbox"  
                 [checked]="questionData.mandatoryInd"
+                (change)="onCheckboxChange('mandatoryInd', $event)"
                 > 
             <span class="slider round"></span> 
         </label>
